@@ -1,0 +1,1 @@
+auto-fu-zsh-99999999-r1.ebuild
