@@ -1,1 +1,0 @@
-zsh-syntax-highlighting-99999999.ebuild
