@@ -1,1 +1,1 @@
-DIST zshrc-mv-1.3.tar.gz 7213 SHA256 9ca19f89a10b5f5c4d646f9d8fd5a7925a9eaf207df43122f34d126520374755 SHA512 9fa91ed26d73c749ea714dad2a4c89804c43888d2117bc7e9a27d2cb50d39e6478c7222c9acb943eb9fb34ddd43a0f04b0c680a77340fffab9a0dfaa89e5bfd5 WHIRLPOOL 090b25b4f0568af4545e2e9b1792aa3eb6cd7239f90e3901106dc15b4efbac8e7e8d94f72a20258f440bf4db8c99fe1756a86a75aea6ad6d16223ba9b9e5c5ed
+DIST zshrc-mv-1.4.tar.gz 7480 SHA256 15eac4a1999e10800e6c7f8e7e922d24906cf757aa15fd901c1a234a634da449 SHA512 2690c6a75a1f291803d98a61a720c409fef3d84d2b7942a3a2af45396a56615f8b7b1d950b1be0aa936d269ab8611b4dd30f229811b79c1c45e7866aa2040a28 WHIRLPOOL 774eee66cbc681e715880410101116028626fee2fd8694725f17ca37c47a03c7cb5d7e71c0a1c0ccab687996cea7dd2f6b1b2034884eb615b7bb61d2eb1b6ef8
