@@ -1,6 +1,11 @@
 # ChangeLog for app-shells/zsh-syntax-highlighting
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*zsh-syntax-highlighting-0.1.2-r1, -99999999-r1 (19 Jan 2013)
+
+  19 Jan 2013; Martin Väth <martin@mvath.de>
+  Change install location, remove old ebuilds.
 
 *zsh-syntax-highlighting-0.1.2 (17 Aug 2012)
 
