@@ -2,6 +2,11 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*zshrc-1.4 (19 Jan 2013)
+
+  19 Jan 2013; Martin Väth <martin@mvath.de>
+  Version bump, remove old ebuild.
+
 *zshrc-1.3 (14 Jan 2013)
 
   14 Jan 2013; Martin Väth <martin@mvath.de>
