@@ -1,6 +1,11 @@
 # ChangeLog for app-shells/auto-fu-zsh
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*auto-fu-zsh-0.0.1.12-r3, auto-fu-zsh-99999999-r1 (10 Jan 2012)
+
+  10 Jan 2013; Martin Väth <martin@mvath.de>
+  Change install location, remove old ebuilds
 
 *auto-fu-zsh-99999999 (04 Nov 2012)
 
